--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,90 @@
-h1{
-  border-color: #d3e644;
-  border-style: dashed;
+
+body {
+  font-family: Arial, sans-serif;
+  background-color: #FFFFFF;
+  margin: 0;
+  padding: 0;
+}
+
+header {
+  background-color: #0047AB;
+  text-align: center;
+  padding: 10px 0;
+  border-bottom: 5px solid #000080;
+}
+
+.header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.logo {
+  max-width: 80px;
+  margin-right: 10px;
+}
+
+h1 {
+  font-family: fantasy;
+  font-size: 2.5em;
+  color: black;
+}
+
+nav {
+  background-color: #87CEEB;
+  padding: 10px 0;
+}
+
+nav ul {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  justify-content: center;
+}
+
+nav ul li {
+  margin: 0 20px;
+}
+
+nav ul li a {
+  text-decoration: none;
+  color: black;
+  font-weight: bold;
+  font-size: 1.2em;
+}
+
+.wrapper {
+  display: flex;
+  justify-content: space-between;
+  padding: 20px;
+}
+
+.welcome-text {
+  width: 65%;
+  padding: 20px;
+  background-color: #87CEEB;
+  border: 3px solid #008000;
+}
+
+.images {
+  width: 30%;
+  padding: 20px;
+  background-color: #87CEEB;
+  border: 3px solid #008000;
+  text-align: center;
+}
+
+.images img {
+  width: 125px;
+  height: 125px;
+  margin: 5px;
+  border: 2px solid black;
+}
+
+footer {
+  background-color: #FFFFFF;
+  text-align: center;
+  padding: 10px;
+  
 }
